Revision history for perl module CHI::Cascade

0.284 2014-07-20
    - Fix bug with ttl, when one target with ttl's rule had dependencies which had other ttl'd rules
    - few code optimizations
    - update inc::Module::Install up to v1.10

0.283 2014-06-17
    - Now i set up minimal version of perl 5.10 because i use defined-or '//'
      operator and some CPAN's tests are failed. I don't whant now to rewrite
      module for old version because i don't love very old soft and love
      an effective code, sorry ;-)

0.282 2014-06-16
    - some corrected t/test_04.pm
      ( test fail report here - http://www.cpantesters.org/cpan/report/8b744d08-764a-11e3-8d2f-66cfdfbfc7aa )
    - fix bug with 'valid_expires', the test was written for it
    - Now value_expires can be coderef for dynamic 'value_expires'

0.28 2013-10-24
    - Removed MYMETA.* files from MANIFEST and added to exclude lists (.gitignore & MANIFEST.SKIP)
      ( http://weblog.bulknews.net/post/44251476706/stop-shipping-mymeta-to-cpan )

0.27 2013-09-01 Stable release - i use it in production ;-)
    - Only fix Changes - reformated to CPAN::Changes::Spec

0.261 2013-06-11
    - Fix bug (not tested yet) - in rare cases there can infinite locks of
      targets in status CASCADE_COMPUTING. Fixed but not tested by me.

0.26 2012-12-14
    - New conception of non-blocking run method - deferring
    - The test 04_memcached_multi.t some fails in FreeBSD. May be this is
      because 'sleep' works not as expected. I changed the 'sleep' to
      'select($,$,$,$)'. May be it will improve this test at FreeBSD...
    - Added CHI::Cascade::Rule::value_expires method for changing by recompute
      code the expiration time of values & target markers
    - Added test for value_expires - test_05.pm by 08_fast_mmap.t
    - Fixed bugs - in tests *_fast_mmap.t if was ^C signal - files of FastMmap
      driver were not deleted
    - The new method CHI::Cascade::Value->state